[gd_scene load_steps=8 format=2]

[ext_resource path="res://Player Join.gd" type="Script" id=2]
[ext_resource path="res://Assets/PlayerOne.png" type="Texture" id=4]
[ext_resource path="res://Assets/PlayerTwo.png" type="Texture" id=5]

[sub_resource type="PhysicsMaterial" id=1]
friction = 100.0
rough = true

[sub_resource type="CircleShape2D" id=2]

[sub_resource type="PhysicsMaterial" id=3]
friction = 100.0
rough = true

[sub_resource type="CircleShape2D" id=4]

[node name="Player Join" type="Node2D"]
script = ExtResource( 2 )

[node name="Player1" type="RigidBody2D" parent="."]
position = Vector2( 269.104, 125.017 )
collision_layer = 2
collision_mask = 2
physics_material_override = SubResource( 1 )
gravity_scale = 6.0
__meta__ = {
"_edit_group_": true
}

[node name="Collision1" type="CollisionShape2D" parent="Player1"]
z_index = -1
shape = SubResource( 2 )

[node name="Icon1" type="Sprite" parent="Player1"]
texture = ExtResource( 4 )

[node name="PinJoint2D" type="PinJoint2D" parent="Player1"]
node_a = NodePath("..")
node_b = NodePath("../../Player2")

[node name="Player2" type="RigidBody2D" parent="."]
position = Vector2( 543.505, 432.261 )
collision_layer = 2
collision_mask = 2
physics_material_override = SubResource( 3 )
gravity_scale = 6.0
__meta__ = {
"_edit_group_": true
}

[node name="Icon2" type="Sprite" parent="Player2"]
texture = ExtResource( 5 )

[node name="Collision2" type="CollisionShape2D" parent="Player2"]
z_index = -1
shape = SubResource( 4 )

[node name="PinJoint2D" type="PinJoint2D" parent="Player2"]
node_a = NodePath("..")
node_b = NodePath("../../Player1")
